fixed missing info, added link to API, adjusted flex spacing

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
     background-color: black;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #app {
     display: flex;
 }
